--- a/frontend/src/css/register.css
+++ b/frontend/src/css/register.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 708px;
     background-color:  rgb(21, 21, 21);;
-    padding-top: 100px;
+    padding-top: 80px;
 }
 #shopingLog_2{
     width: 150px;
@@ -14,4 +14,18 @@
     margin: 10px auto 0px auto;
     /* border: 1px solid; */
     padding-left: 150px;
+}
+#upload_profile{
+    & input{
+        display: none;
+    }
+    & label{
+        background-color: white;
+        width: 100%;
+        height: 55px;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        padding: 13px;
+        background-color: orange;
+    }
 }
