--- a/frontend/src/css/playSong.css
+++ b/frontend/src/css/playSong.css
@@ -1,9 +1,16 @@
 .track_box{
     width: 100%;
     display: flex;
-    justify-content: right;
+    /* justify-content: right; */
 
-   
+    & h4{
+        margin: 0px 150px 0px 0px;
+        padding-bottom: 50px;
+        height: 100%;
+        /* border: 1px solid; */
+        position: relative;
+        bottom: 20px;
+    }
 
     & p{
         margin: 10px 30px 0px 0px;
@@ -12,7 +19,7 @@
     }
 
     & audio{
-        width: 30%;
+        width: 40%;
         height: 40px;
         /* color: aqua; */
         margin-top: 5px;
@@ -23,7 +30,7 @@
     width: 40Px;
     height: 40px;
     border-radius: 100px;
-    background-color: red;
+    /* background-color: red; */
     /* margin: 0px 10px 0px 0px; */
     margin: 5px 20px 0px 0px;
 
@@ -32,5 +39,24 @@
         height: 100%;
         border-radius: 100px;
         /* object-fit: ; */
+    }
+}
+.rate_box{
+    width: 12%;
+    padding-top: 5px;
+    /* border: 1px solid red; */
+    position: absolute;
+    right: 50px;
+    bottom:20px;
+    & i{
+        margin: 5px;
+        font-size: 20px;
+    }
+    & input[type="radio"]{
+        display: none;
+    }
+    .star{
+        cursor: pointer;
+        transition: color 200ms;
     }
 }
